--- a/app/views/blazer/queries/show.html.erb
+++ b/app/views/blazer/queries/show.html.erb
@@ -4,16 +4,16 @@
   <div class="container">
     <div class="row" style="padding-top: 13px;">
       <div class="col-sm-9">
-        <h3 style="margin: 0; line-height: 34px;">
+        <%= link_to "Home", root_path, class: "btn btn-primary", style: "vertical-align: top; margin-right: 5px;" %>
+        <h3 style="margin: 0; line-height: 34px; display: inline-block;">
           <%= @query.name %>
         </h3>
       </div>
       <div class="col-sm-3 text-right">
-        <%= link_to "Home", root_path, class: "btn btn-primary" %>
         <%= link_to "Edit", edit_query_path(@query), class: "btn btn-default" %>
 
         <% if !@error and @success %>
-          <%= button_to "Download", run_queries_path(statement: @query.statement, query_id: @query.id, format: "csv"), class: "btn btn-info" %>
+          <%= button_to "Download", run_queries_path(statement: @query.statement, query_id: @query.id, format: "csv"), class: "btn btn-primary" %>
         <% end %>
       </div>
     </div>
