--- a/app/views/layouts/blazer/application.html.erb
+++ b/app/views/layouts/blazer/application.html.erb
@@ -6,6 +6,7 @@
     <meta charset="utf-8" />
 
     <%= stylesheet_link_tag "blazer/application" %>
+    <%= yield :javascript %>
     <%= javascript_include_tag "blazer/application" %>
     <%= csrf_meta_tags %>
   </head>
