Fixed charts on query creation

--- a/app/views/layouts/blazer/application.html.erb
+++ b/app/views/layouts/blazer/application.html.erb
@@ -6,8 +6,7 @@
     <meta charset="utf-8" />
 
     <%= stylesheet_link_tag "blazer/application" %>
-    <%= yield :javascript %>
-    <%= javascript_include_tag "blazer/application" %>
+    <%= javascript_include_tag "//www.google.com/jsapi", "blazer/application" %>
     <%= csrf_meta_tags %>
   </head>
   <body>
