Allow Blazer to work without a user model - closes #14

--- a/app/views/blazer/queries/index.html.erb
+++ b/app/views/blazer/queries/index.html.erb
@@ -26,7 +26,7 @@
             <% end %>
           </td>
           <td class="creator text-right text-muted">
-            <% if (creator = query.creator) and creator.respond_to?(Blazer.user_name) %>
+            <% if query.respond_to?(:creator) && (creator = query.creator) && creator.respond_to?(Blazer.user_name) %>
               <% name = creator.send(Blazer.user_name) %>
               <% if respond_to?(:current_user) and creator == current_user %>
                 You
