--- a/app/views/blazer/queries/show.html.erb
+++ b/app/views/blazer/queries/show.html.erb
@@ -1,7 +1,7 @@
 <% title @query.name %>
 
 <div style="position: fixed; top: 0; left: 0; right: 0; background-color: whitesmoke; height: 60px; z-index: 1001;">
-  <div class="container">
+  <div class="container-fluid">
     <div class="row" style="padding-top: 13px;">
       <div class="col-sm-9">
         <%= link_to "Home", root_path, class: "btn btn-primary", style: "vertical-align: top; margin-right: 5px;" %>
