--- a/app/views/blazer/queries/show.html.erb
+++ b/app/views/blazer/queries/show.html.erb
@@ -13,7 +13,7 @@
         <%= link_to "Edit", edit_query_path(@query), class: "btn btn-default" %>
         <%= link_to "Fork", new_query_path(statement: @query.statement), class: "btn btn-info" %>
 
-        <% if !@error and @success %>
+        <% if !@error && @success %>
           <%= button_to "Download", run_queries_path(statement: @statement, query_id: @query.id, format: "csv"), class: "btn btn-primary" %>
         <% end %>
       </div>
