--- a/app/views/blazer/checks/index.html.erb
+++ b/app/views/blazer/checks/index.html.erb
@@ -26,7 +26,7 @@
         </td>
         <td>
           <ul class="list-unstyled" style="margin-bottom: 0;">
-            <% check.emails.to_s.split(",").each do |email| %>
+            <% check.split_emails.each do |email| %>
               <li><%= email %></li>
             <% end %>
           </ul>
