No need to select initial date range

--- a/app/views/blazer/queries/show.html.erb
+++ b/app/views/blazer/queries/show.html.erb
@@ -1,5 +1,19 @@
 <% title @query.name %>
 
+<script>
+  function submitIfCompleted($form) {
+    var completed = true;
+    $form.find("input[name], select").each( function () {
+      if ($(this).val() == "") {
+        completed = false;
+      }
+    });
+    if (completed) {
+      $form.submit();
+    }
+  }
+</script>
+
 <div style="position: fixed; top: 0; left: 0; right: 0; background-color: whitesmoke; height: 60px; z-index: 1001;">
   <div class="container">
     <div class="row" style="padding-top: 13px;">
@@ -121,6 +135,10 @@
           picker.setStartDate(moment.tz($("#start_time").val(), timeZone));
           picker.setEndDate(moment.tz($("#end_time").val(), timeZone));
           $("#reportrange").trigger('apply.daterangepicker', picker)
+        } else {
+          var picker = $("#reportrange").data('daterangepicker');
+          $("#reportrange").trigger('apply.daterangepicker', picker);
+          submitIfCompleted($("#start_time").closest("form"));
         }
       </script>
     <% end %>
@@ -146,18 +164,6 @@
 
 <script>
   hljs.initHighlightingOnLoad();
-
-  function submitIfCompleted($form) {
-    var completed = true;
-    $form.find("input[name], select").each( function () {
-      if ($(this).val() == "") {
-        completed = false;
-      }
-    });
-    if (completed) {
-      $form.submit();
-    }
-  }
 
   $(".form-inline input, .form-inline select").change( function () {
     submitIfCompleted($(this).closest("form"));
